closes #15, closes #16,closes #17.